--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,15 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
+
+.info {
+  word-break: break-all;
+}
+
+.estate {
+  word-break: break-all;
+}
+
 .sticky-top {
   background-color: white;
   position: fixed;
