--- a/app/views/admins/estates/edit.html.erb
+++ b/app/views/admins/estates/edit.html.erb
@@ -35,7 +35,7 @@
          <div class="modal fade text-center m-3" id="myModal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :間取り図画像 %>
@@ -47,7 +47,7 @@
          <div class="modal fade text-center m-3" id="myModal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -61,7 +61,7 @@
          <div class="modal fade text-center m-3" id="myModal-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像２ %>
@@ -73,7 +73,7 @@
          <div class="modal fade text-center m-3" id="myModal-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -87,7 +87,7 @@
          <div class="modal fade text-center m-3" id="myModal-5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像４ %>
@@ -99,7 +99,7 @@
          <div class="modal fade text-center m-3" id="myModal-6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -113,7 +113,7 @@
          <div class="modal fade text-center m-3" id="myModal-7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像６ %>
@@ -125,7 +125,7 @@
          <div class="modal fade text-center m-3" id="myModal-8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -139,7 +139,7 @@
          <div class="modal fade text-center m-3" id="myModal-9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像８ %>
@@ -151,7 +151,7 @@
          <div class="modal fade text-center m-3" id="myModal-10" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
       </div>
       <div class="row pb-4" style="margin-right: 1px">
@@ -165,7 +165,7 @@
          <div class="modal fade text-center m-3" id="myModal-11" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像１０ %>
@@ -177,7 +177,7 @@
          <div class="modal fade text-center m-3" id="myModal-12" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
       </div>
       <div class="row" style="margin-right: 1px">
@@ -191,7 +191,7 @@
          <div class="modal fade text-center m-3" id="myModal-13" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
          <div class="col text-center pt-5">
             <%= f.label :物件画像１２ %>
@@ -203,7 +203,7 @@
          <div class="modal fade text-center m-3" id="myModal-14" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "1000x650" %>
             <div class="modal-dialog" role="document"></div>
-            <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
          </div>
       </div>
       <div class="row justify-content-center" style="padding: 80px 0;">
