--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -2,116 +2,89 @@
 
 <div class="text-center" style="padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">入稿物件一覧</div>
 <div class="container">
-  <% @estates.each do |estate| %>
-    <table class="card shadow" style="margin-bottom: 30px;">
-      <tr>
-        <td><%= attachment_image_tag estate, :background_image, format: 'jpeg', size: "300x300" %></td>
-        <td>
-          <table class="table table-striped" style="margin-left: 60px;">
-            <tr>
-              <td>物件名</td>
-              <td><%= estate.name %>　<%= estate.room_number %>号室</td>
-            </tr>
-            <tr>
-              <td>住所</td>
-              <td><%= estate.address %></td>
-            </tr>
-            <tr>
-              <td>賃料</td>
-            　<td>¥<%= estate.price.to_s(:delimited) %></td>
-            </tr>
-            <tr>
-              <td>間取り</td>
-            　<td><%= estate.floor %></td>
-            </tr>
-            <tr>
-              <td>投稿日時</td>
-            　<td><%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
-            </tr>
-            <tr>
-              <td>更新日時</td>
-              <td><%= estate.updated_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
-              <td><%= link_to "編集", edit_admins_estate_path(estate), class: "edit btn-sm btn-outline-secondary", :style=>" margin-left: 15px; text-decoration: none;" %></td>
-              <td><%= link_to "削除", admins_estate_path(estate), method: :delete, class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;" %></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr class="text-center">
-        <td>お問い合わせ一覧</td>
-      </tr>
-      <% estate.researches.each do |research| %>
-        <tr class="td" style="width: 100%; margin-bottom: 30px; padding: 400px;">
+  <% if @estates.present? %>
+    <% @estates.each do |estate| %>
+      <table class="card shadow" style="margin-bottom: 30px;">
+        <tr>
+          <td><%= attachment_image_tag estate, :background_image, format: 'jpeg', size: "300x300" %></td>
           <td>
-          <table class="card">
-            <tr>
-              <td>ユーザ名</td>
-              <td class="card"><%= research.customer.name %></td>
-            </tr>
-            <tr>
-              <td>メールアドレス</td>
-              <td class="card"><%= research.customer.email %></td>
-            </tr>
-            <tr>
-              <td>電話番号</td>
-              <td class="card"><%= research.customer.phone_number %></td>
-            </tr>
-            <tr>
-              <td>お問い合わせタイトル</td>
-              <td class="card"><%= research.title %></td>
-            </tr>
-            <tr>
-              <td>お問い合わせ本文</td>
-              <td class="card"><%= research.body %></td>
-            </tr>
-            <tr>
-              <td>お問い合わせ日時</td>
-              <td class="card"><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
-            </tr>
-          </table>
+            <table class="table table-striped" style="margin-left: 60px;">
+              <tr>
+                <td>物件名</td>
+                <td><%= estate.name %>　<%= estate.room_number %>号室</td>
+              </tr>
+              <tr>
+                <td>住所</td>
+                <td><%= estate.address %></td>
+              </tr>
+              <tr>
+                <td>賃料</td>
+              　<td>¥<%= estate.price.to_s(:delimited) %></td>
+              </tr>
+              <tr>
+                <td>間取り</td>
+              　<td><%= estate.floor %></td>
+              </tr>
+              <tr>
+                <td>投稿日時</td>
+              　<td><%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
+              </tr>
+              <tr>
+                <td>更新日時</td>
+                <td><%= estate.updated_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
+              </tr>
+              <tr>
+                <td>お問い合わせ件数</td>
+                <td><%= link_to estate.researches.count, admins_estate_path(estate) %></td>
+                <td><%= link_to "編集", edit_admins_estate_path(estate), class: "edit btn-sm btn-outline-secondary", :style=>" margin-left: 15px; text-decoration: none;" %></td>
+                <td><%= link_to "削除", admins_estate_path(estate), method: :delete, class: "edit btn-sm btn-outline-secondary", :style=>"text-decoration: none;" %></td>
+              </tr>
+            </table>
           </td>
         </tr>
-      <% end %>
-    </table>
+      </table>
+    <% end %>
+  <% else %>
+    <div class="text-center pt-5">入稿物件はありません。</div>
   <% end %>
   <%= paginate @estates %>
 </div>
 
-
-
-
-<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">カスタマーズ</div>
+<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">カスタマー一覧</div>
 <div class="container" style="margin-bottom: 100px;">
-  <% @customers.each do |customer| %>
-    <div class="card shadow">
-      <div class="row pt-5">
-        <div class="col-3 text-center pt-1" style="font-weight: bold; font-size: 25px;">お名前</div>
-        <div class="col-7">
-          <div class="card" style="font-size: 25px;">
-            <%= customer.name %>
+  <% if @customers.present? %>
+    <% @customers.each do |customer| %>
+      <div class="card shadow">
+        <div class="row pt-5">
+          <div class="col-3 text-center pt-1" style="font-weight: bold; font-size: 25px;">お名前</div>
+          <div class="col-7">
+            <div class="card" style="font-size: 25px;">
+              <%= customer.name %>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="row pt-4">
-        <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">メールアドレス</div>
-        <div class="col-7">
-          <div class="card" style="font-size: 25px;">
-            <%= customer.email %>
+        <div class="row pt-4">
+          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">メールアドレス</div>
+          <div class="col-7">
+            <div class="card" style="font-size: 25px;">
+              <%= customer.email %>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="row pt-4 pb-5">
-        <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">電話番号</div>
-        <div class="col-7">
-          <div class="card" style="font-size: 25px;">
-            <%= customer.phone_number %>
+        <div class="row pt-4 pb-5">
+          <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">電話番号</div>
+          <div class="col-7">
+            <div class="card" style="font-size: 25px;">
+              <%= customer.phone_number %>
+            </div>
           </div>
         </div>
-      </div>
-  　</div>
+    　</div>
+　  <% end %>
+　<% else %>
+　  <div class="text-center pt-5">カスタマはおりません。</div>
 　<% end %>
+　<%= paginate @customers %>
 </div>
-
-<%= paginate @customers %>
 
 <%= render "admins/customers/footer" %>
