--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -92,9 +92,9 @@
       <div class>N e w</div>
     </div>
   </div>
-  <div class="container mb-5">
+  <div class="container">
     <div id="example-3" class="carousel slide" data-ride="carousel" style="width:100%">
-      <div class="carousel-inner text-center">
+      <div class="carousel-inner">
 
         <%= render "article", estates: @estates %>
 
